--- a/css/main.css
+++ b/css/main.css
@@ -2678,6 +2678,34 @@ body.oxford-page {
   .info-social span {
     display: none;
   }
+  .collapsible {
+    background-color: #0073e6;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 16px;
+    margin-top: 20px;
+}
+.collapsible:after {
+    content: '\002B';
+    font-size: 18px;
+    color: white;
+    float: right;
+    margin-left: 5px;
+}
+.collapsible.active:after {
+    content: "\2212";
+}
+.content {
+    padding: 0 15px;
+    display: none;
+    overflow: hidden;
+    background-color: #f9f9f9;
+}
 
 }
 
